force-app/main/default/objects/cnx__UCCE_Settings__c/cnx__UCCE_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>obsolete</label>
</CustomObject>