force-app/main/default/objects/cnx__UCCE_Settings__c/fields/cnx__Gadget_URL__c.field-meta.xml
<CustomField>
    <fullName>cnx__Gadget_URL__c</fullName>
    <defaultValue>&quot;http://&lt;webserverhost&gt;:8083/ConnectsGadget/connects.html&quot;</defaultValue>
    <label>obsolete</label>
    <length>100</length>
    <type>Text</type>
</CustomField>