force-app/main/default/objects/cnx__UCCE_Settings__c/fields/cnx__Media_Service_URL__c.field-meta.xml
<CustomField>
    <fullName>cnx__Media_Service_URL__c</fullName>
    <label>obsolete</label>
    <length>100</length>
    <type>Text</type>
</CustomField>